Fix "Nossa História" page alignment

--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -74,9 +74,9 @@
 
 
 .staticFigure {
-  position: fixed;
-  right: 150px;
-  top: 150px;
+  position: absolute;
+  right: 200px;
+  top: 180px;
   z-index: -1;
   pointer-events: none;
 }
